# infra

./: .gitignore  README.md  deploy.yaml  init.yaml  secrets.yaml.example
bookstack/: deploy.yaml  docker-compose.yaml
caddy/: Caddyfile  caddy.service  deploy.yaml  docker-compose.yaml
clicketing/: docker-compose.yaml
collabora/: coolwsd.xml  docker-compose.yaml
directus/: deploy.yaml  docker-compose.yaml  snapshot.yaml
icelan/: deploy.yaml  docker-compose.yaml
keycloak/: deploy.yaml  docker-compose.yaml
mattermost/: .env.example  database.env.example  deploy.yaml  docker-compose.yaml
nextcloud/: .env.example  app.env.example  config.env  config.php  database.env.example  deploy.yaml  docker-compose.yaml
onlyoffice/: deploy.yaml  docker-compose.yaml
playbooks/: .env.example  caddy.yaml  deploy.yaml  directus.yaml  init.yaml  setup-backup.yaml  webhook.yaml
rallly/: .env.example  docker-compose.yaml  docker-compose.yml
roboclic/: .keys.example  config.json  deploy.yaml  docker-compose.yaml
roles/webhook/files/: Cargo.toml  README.md  config.example.json
roles/webhook/files/src/: config.rs  error.rs  github.rs  log.rs  main.rs  restart.rs  routes.rs  validation.rs
roles/webhook/files/src/github/: event.rs  issues.rs
stacks/: caddy.yaml
synapse/: deploy.yaml  docker-compose.yaml  homeserver.yaml.j2  homeserver.yaml.template
vaultwarden/: .env.example  config.json  deploy.yaml  docker-compose.yaml
webhook/: Cargo.toml  README.md  config.example.json  config.json  config.json.j2  deploy.yaml  push.json  webhook.service  webhook.service.j2
(+84 files in other folders)
