[package]
name = "webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
ascii = "1.1.0"
hex = "0.4.3"
hmac = "0.12.1"
regex = "1.10.6"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
